{
    "version": 1,
    "name": "PlayerInputMap",
    "maps": [
        {
            "name": "Player",
            "id": "852fc1e4-408a-441d-aa6a-3f0f4f31816f",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "5b882c4a-1c1a-4385-bccb-aa481886e404",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "be15e9bf-a3fb-48ac-87ec-9ffb3deb4a03",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "dfea0bb3-b2d7-4bd2-bd0c-83fad1253473",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "f30ffb63-8a75-4fa6-bccb-c9137cfec9c0",
                    "path": "2DVector(mode=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "4d07a490-6042-4e5a-a143-d047ad946ae2",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "e9381c81-e142-469c-a6e6-d8191e53d600",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "04425bbb-77f3-42ec-b651-f424bb7a10ea",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "d7f2a9f9-a63a-40ad-8306-85d6f520d724",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}